--- a/Load/database/load_s3_to_postgres.ipynb
+++ b/Load/database/load_s3_to_postgres.ipynb
@@ -19,16 +19,19 @@
    "id": "af5865d6",
    "metadata": {},
    "source": [
-    "#### Chargement des variables d’environnement, configuration AWS et Postgres, et téléchargement du fichier depuis S3\n",
+    "<p align=\"center\" style=\"font-size:0.85em; text-decoration: underline;\">\n",
+    "<b>Chargement des variables d’environnement, configuration AWS et Postgres, et téléchargement depuis S3</b>\n",
+    "</p>\n",
     "\n",
-    "Dans cette section, on charge toutes les variables sensibles (clés AWS, identifiants de base de données) \n",
-    "depuis le fichier `.env`.  \n",
+    "<p style=\"font-size:0.85em;\">\n",
+    "Cette section charge les variables sensibles depuis le fichier <code>.env</code> :  \n",
     "\n",
-    "- Les **identifiants AWS** servent à se connecter à un bucket S3 pour télécharger le fichier final \n",
-    "  (`hotels_weather_final_ter.csv`).  \n",
-    "- Les **paramètres Postgres** seront utilisés plus tard pour établir une connexion à la base de données.  \n",
-    "- Enfin, on utilise `boto3` pour créer un client S3 et rapatrier le fichier traité depuis le bucket, \n",
-    "afin de l’exploiter localement.  \n"
+    "- <b>Clés AWS</b> pour accéder au bucket S3 et télécharger le fichier final (<code>hotels_weather_final_ter.csv</code>).  \n",
+    "- <b>Paramètres Postgres</b> pour préparer la connexion à la base de données.  \n",
+    "\n",
+    "Le fichier est ensuite récupéré localement via <code>boto3</code> pour être exploité.\n",
+    "</p>\n",
+    " \n"
    ]
   },
   {
@@ -63,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- AWS credentials (from .env) ---\n",
+    "# AWS credentials (from .env) \n",
     "# Keep these values secret\n",
     "AWS_ACCESS_KEY_ID = os.getenv('AWS_KEY')\n",
     "AWS_SECRET_ACCESS_KEY = os.getenv('AWS_SECRET_KEY')\n",
@@ -312,20 +315,27 @@
    "id": "0e14bbb5",
    "metadata": {},
    "source": [
-    "#### Chargement des données dans PostgreSQL\n",
+    "<p align=\"center\" style=\"font-size:0.85em; text-decoration: underline;\">\n",
+    "<b>Chargement des données dans PostgreSQL</b>\n",
+    "</p>\n",
     "\n",
-    "Dans cette section, on insère le fichier final (`hotels_weather_final_ter.csv`) dans la base de données PostgreSQL.  \n",
+    "<p style=\"font-size:0.85em;\">\n",
+    "Cette section importe le fichier <code>hotels_weather_final_ter.csv</code> dans la base PostgreSQL à l’aide de <code>psycopg2</code>.  \n",
+    "Les principales étapes sont :\n",
+    "</p>\n",
     "\n",
-    "Les étapes sont :  \n",
-    "1. **Connexion à PostgreSQL** avec `psycopg2`, en utilisant les identifiants stockés dans le fichier `.env`.  \n",
-    "2. **Réinitialisation de la table `hotels_weather`** avec `TRUNCATE`, ce qui supprime toutes les anciennes données tout en conservant la structure et les index.  \n",
-    "3. **Chargement en masse des données (COPY)** :  \n",
-    "   - Ouverture du fichier CSV local (encodage `utf-8-sig`).  \n",
-    "   - Suppression de l’en-tête (première ligne).  \n",
-    "   - Utilisation de la commande `COPY FROM STDIN` pour insérer efficacement les données dans la table en respectant l’ordre exact des colonnes.  \n",
-    "4. **Validation et fermeture** : une fois l’import terminé, la transaction est validée (`commit`) et la connexion (curseur et session) est fermée proprement.  \n",
+    "<p style=\"font-size:0.85em;\">\n",
     "\n",
-    "Cette approche optimise l’import de gros volumes de données et garantit que la table `hotels_weather` contient les informations actualisées, prêtes à être exploitées pour des analyses et visualisations.\n"
+    "1. Connexion à la base via les identifiants du fichier <code>.env</code>.  \n",
+    "2. Réinitialisation de la table <code>hotels_weather</code> avec <code>TRUNCATE</code>.  \n",
+    "3. Chargement en masse avec <code>COPY FROM STDIN</code> après ouverture du fichier CSV (UTF-8).  \n",
+    "4. Validation et fermeture de la connexion.\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"font-size:0.85em;\">\n",
+    "Cette méthode assure un import rapide et propre des données actualisées dans PostgreSQL.\n",
+    "</p>\n",
+    "\n"
    ]
   },
   {
@@ -393,7 +403,7 @@
    "outputs": [],
    "source": [
     "# Finalize the load\n",
-    "# - Commit the transaction and close cursor/connection cleanly.\n",
+    "# Commit the transaction and close cursor/connection cleanly.\n",
     "conn.commit()\n",
     "cur.close()\n",
     "conn.close()"
