--- a/Transform/final_csv.ipynb
+++ b/Transform/final_csv.ipynb
@@ -31,8 +31,7 @@
     "\n",
     "Avant de fusionner les jeux de données (coordonnées, hôtels, météo), \n",
     "on vérifie que chaque `city_id` renvoie bien au même `city_name` dans toutes les sources.  \n",
-    "Cette étape permet de détecter des incohérences.\n",
-    "et d’assurer une fusion correcte des données complètes."
+    "Cette étape permet de détecter des incohérenceset d’assurer une fusion correcte des données complètes."
    ]
   },
   {
@@ -129,11 +128,9 @@
    "source": [
     "#### Harmonisation des noms de villes dans le dataset des hôtels\n",
     "\n",
-    "Même si la cohérence des `city_id` et `city_name` a déjà été vérifiée,  \n",
-    "on force ici l’utilisation de la table de référence (`coordGPS/coordinates_clean.csv`).  \n",
+    "Même si la cohérence des `city_id` et `city_name` a déjà été vérifiée, on force ici l’utilisation de la table de référence (`coordGPS/coordinates_clean.csv`).  \n",
     "\n",
-    "L’objectif est de garantir que chaque hôtel soit associé à un nom de ville standardisé,  \n",
-    "ce qui rend le pipeline plus robuste face à d’éventuelles différences d’écriture ou futures mises à jour des données.\n"
+    "L’objectif est de garantir que chaque hôtel soit associé à un nom de ville standardisé\n"
    ]
   },
   {
@@ -198,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1f268e3e",
    "metadata": {},
    "outputs": [],
@@ -208,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "88436ed2",
    "metadata": {},
    "outputs": [],
@@ -254,7 +251,7 @@
    "source": [
     "#### Fusion finale des données\n",
     "\n",
-    "À cette étape, on construit le jeu de données complet :\n",
+    "Construction du jeu de données complet :\n",
     "\n",
     "1. Fusion des coordonnées et des données météo par `city_id`.  \n",
     "   (les deux viennent de la même source JSON, donc la correspondance est fiable).  \n",
@@ -264,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "397c5556",
    "metadata": {},
    "outputs": [
@@ -480,18 +477,18 @@
     }
    ],
    "source": [
-    "# 1. Merge coordinates and weather data on city_id\n",
+    "# Merge coordinates and weather data on city_id\n",
     "# Inner join: keep only cities that exist in both datasets\n",
     "df_cities = pd.merge(df_coord, df_weather, on=\"city_id\", how=\"inner\")\n",
     "\n",
-    "# 2. Merge hotels (already harmonized) with cities + weather\n",
+    "# Merge hotels (already harmonized) with cities + weather\n",
     "# Left join: keep all hotels, add geo/weather info when available\n",
     "df_final = pd.merge(df_hotels_bis, df_cities, on=\"city_id\", how=\"left\")\n",
     "\n",
-    "# 3. Export the final dataset to CSV (without index column)\n",
+    "# Export the final dataset to CSV (without index column)\n",
     "df_final.to_csv(\"data/hotels_weather_combined.csv\", index=False)\n",
     "\n",
-    "# 4. Reload and preview the combined dataset\n",
+    "# eload and preview the combined dataset\n",
     "df = pd.read_csv(\"data/hotels_weather_combined.csv\")\n",
     "display(df.head())\n"
    ]
@@ -584,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "27233791",
    "metadata": {},
    "outputs": [
@@ -645,17 +642,122 @@
        "      <td>Avignon</td>\n",
        "      <td>13.882143</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Nimes</td>\n",
+       "      <td>7.686429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Aigues-Mortes</td>\n",
+       "      <td>6.610714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>525</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Le Havre</td>\n",
+       "      <td>6.568571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>600</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Lyon</td>\n",
+       "      <td>5.953571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Sainte-Marie de la Mer</td>\n",
+       "      <td>3.330714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Amiens</td>\n",
+       "      <td>-0.422857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Rouen</td>\n",
+       "      <td>-0.532857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>850</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Uzes</td>\n",
+       "      <td>-3.753571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>550</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Le Mont-Saint-Michel</td>\n",
+       "      <td>-4.422857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Collioure</td>\n",
+       "      <td>-6.985714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Aix-en-Provence</td>\n",
+       "      <td>-10.075714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>750</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Saint-Malo</td>\n",
+       "      <td>-11.126429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Besançon</td>\n",
+       "      <td>-21.440714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>625</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Marseille</td>\n",
+       "      <td>-24.680000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Cassis</td>\n",
+       "      <td>-24.945000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     city_id           city_name  good_weather_score\n",
-       "575       24               Lille           34.593571\n",
-       "700       29               Paris           33.266429\n",
-       "250       11  Bormes-les-Mimosas           20.407143\n",
-       "150        7              Bayeux           14.297143\n",
-       "125        6             Avignon           13.882143"
+       "     city_id               city_name  good_weather_score\n",
+       "575       24                   Lille           34.593571\n",
+       "700       29                   Paris           33.266429\n",
+       "250       11      Bormes-les-Mimosas           20.407143\n",
+       "150        7                  Bayeux           14.297143\n",
+       "125        6                 Avignon           13.882143\n",
+       "675       28                   Nimes            7.686429\n",
+       "0          1           Aigues-Mortes            6.610714\n",
+       "525       22                Le Havre            6.568571\n",
+       "600       25                    Lyon            5.953571\n",
+       "775       32  Sainte-Marie de la Mer            3.330714\n",
+       "50         3                  Amiens           -0.422857\n",
+       "725       30                   Rouen           -0.532857\n",
+       "850       35                    Uzes           -3.753571\n",
+       "550       23    Le Mont-Saint-Michel           -4.422857\n",
+       "350       15               Collioure           -6.985714\n",
+       "25         2         Aix-en-Provence          -10.075714\n",
+       "750       31              Saint-Malo          -11.126429\n",
+       "200        9                Besançon          -21.440714\n",
+       "625       26               Marseille          -24.680000\n",
+       "300       13                  Cassis          -24.945000"
       ]
      },
      "metadata": {},
@@ -671,7 +773,6 @@
     "    .head(5)                                        # select top 5\n",
     ")\n",
     "\n",
-    "# Display the top 5 destinations\n",
     "display(top_destinations)\n"
    ]
   },
