--- a/Transform/meteo/analyse_meteo.ipynb
+++ b/Transform/meteo/analyse_meteo.ipynb
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e7550f8e",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,6 @@
    ],
    "source": [
     "# Plot heatmap to visualize relationships between weather variables\n",
-    "# Correlation values range from -1 (perfect negative) to +1 (perfect positive)\n",
     "correlation_matrix = df_weather[numeric_cols].corr()\n",
     "\n",
     "# Create a heatmap for a more visual interpretation\n",
@@ -1050,7 +1049,7 @@
     "sns.heatmap(\n",
     "    correlation_matrix, \n",
     "    annot=True,       # Display correlation values inside the cells\n",
-    "    cmap='coolwarm',  # Diverging color scheme: red=positive, blue=negative\n",
+    "    cmap='coolwarm',  \n",
     "    vmin=-1, vmax=1,  # Fix color scale for consistency across plots\n",
     "    square=True,      # Make cells square for better readability\n",
     "    linewidths=0.5    # Thin lines between cells\n",
