--- a/Visualisations/cartes.ipynb
+++ b/Visualisations/cartes.ipynb
@@ -15,26 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "25db4b8d",
-   "metadata": {},
-   "source": [
-    "#### Configuration AWS S3, préparation de l’upload et objectif de visualisation\n",
-    "\n",
-    "Dans cette section, on configure l’accès à AWS S3 pour pouvoir stocker le fichier final \n",
-    "(`hotels_weather_final.csv`) dans un bucket.  \n",
-    "\n",
-    "Les étapes sont les suivantes :\n",
-    "1. Charger les variables d’environnement (clés AWS) depuis le fichier `.env`.  \n",
-    "2. Définir les constantes utiles : nom du bucket, chemin du fichier sur S3, fichier local.  \n",
-    "3. Créer un client S3 avec la librairie `boto3` pour interagir avec le service.  \n",
-    "\n",
-    "L’objectif final est de disposer d’un fichier centralisé sur S3, qui servira de source unique pour \n",
-    "réaliser des visualisations interactives (ex. carte des meilleures destinations selon la météo, \n",
-    "ou classement des hôtels) directement à partir de ce jeu de données nettoyé et enrichi."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8a386e54",
@@ -93,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eb374c44",
    "metadata": {},
    "outputs": [
@@ -279,7 +259,7 @@
        "4  19.544286  53.714286    5.901429  29.571429  1.0            6.610714  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4ab37726",
    "metadata": {},
    "outputs": [
@@ -1295,11 +1275,11 @@
     "# Create a scatter mapbox to visualize the top 5 cities\n",
     "fig = px.scatter_mapbox(\n",
     "    top5_cities,\n",
-    "    lat=\"city_latitude\",           # latitude of the city\n",
-    "    lon=\"city_longitude\",          # longitude of the city\n",
+    "    lat=\"city_latitude\",           \n",
+    "    lon=\"city_longitude\",          \n",
     "    size=\"good_weather_score\",     # circle size represents the score\n",
-    "    color=\"good_weather_score\",    # color scale represents the score\n",
-    "    hover_name=\"city_name\",        # city name on hover\n",
+    "    color=\"good_weather_score\",   \n",
+    "    hover_name=\"city_name\",        \n",
     "    hover_data={\"score\": True, \"good_weather_score\": False},  # display rounded score only\n",
     "    color_continuous_scale=px.colors.sequential.Rainbow,\n",
     "    zoom=4,\n",
@@ -1322,7 +1302,6 @@
     "    margin=dict(l=0, r=0, t=50, b=0)  # remove extra margins\n",
     ")\n",
     "\n",
-    "# Display the interactive map\n",
     "fig.show()\n"
    ]
   }
@@ -1343,7 +1322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
