--- a/Transform/coordGPS/verif_coord.ipynb
+++ b/Transform/coordGPS/verif_coord.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "5d8d7888",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import json\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "import re"
+    "import re\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "321a3513",
    "metadata": {},
    "outputs": [
@@ -89,7 +90,7 @@
        "4               Lille, France  50.636565   3.063528"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,20 +101,21 @@
     "    raw_data = json.load(f)\n",
     "\n",
     "# Convert the raw JSON data into a pandas DataFrame\n",
-    "# Each row contains the city name, latitude, and longitude as floats\n",
+    "# Each row represents a city and includes its name, latitude, and longitude.\n",
+    "# Latitude and longitude values are explicitly converted to floats to ensure\n",
+    "# proper numeric types for calculations, mapping, or geospatial analysis.\n",
     "df_coords = pd.DataFrame([\n",
     "    {\"city\": city, \"latitude\": float(data[\"latitude\"]), \"longitude\": float(data[\"longitude\"])}\n",
     "    for city, data in raw_data.items()\n",
     "])\n",
     "\n",
-    "# Display the first 5 rows of the DataFrame to check the structure\n",
     "df_coords.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f8446408",
+   "execution_count": 11,
+   "id": "fffda4c7",
    "metadata": {},
    "outputs": [
     {
@@ -1146,60 +1148,65 @@
     }
    ],
    "source": [
-    "# --- helpers ---\n",
-    "def normalize_city(name: str) -> str:\n",
+    "# Helpers\n",
+    "\n",
+    "def clean_city_name(name: str) -> str:\n",
     "    \"\"\"\n",
-    "    Minimal city name normalizer:\n",
+    "    Clean a city name for display:\n",
     "    - Removes trailing \", France\"\n",
-    "    - Strips extra spaces\n",
-    "    - Converts to lowercase\n",
+    "    - Collapses extra spaces\n",
+    "    - Keeps capitalization\n",
     "    \"\"\"\n",
     "    name = re.sub(r\",?\\s*France$\", \"\", name, flags=re.I)\n",
-    "    name = re.sub(r\"\\s+\", \" \", name).strip().lower()\n",
+    "    name = re.sub(r\"\\s+\", \" \", name).strip()\n",
     "    return name\n",
     "\n",
-    "# 1) clean label for display (without \", France\")\n",
-    "df_coords[\"city_clean\"] = df_coords[\"city\"].str.replace(r\",?\\s*France$\", \"\", regex=True)\n",
     "\n",
-    "# 2) define important cities (write them naturally; accents/tirets ok)\n",
-    "important_raw = {\n",
+    "# Cleaning \n",
+    "\n",
+    "# Create a clean label for display (remove \", France\" and extra spaces)\n",
+    "df_coords[\"city_clean\"] = df_coords[\"city\"].apply(clean_city_name)\n",
+    "\n",
+    "# Label only for important cities (display purpose)\n",
+    "important_cities = {\n",
     "    \"Paris\", \"Lyon\", \"Marseille\", \"Toulouse\", \"Lille\",\n",
-    "    \"Strasbourg\", \"Grenoble\", \"Dijon\", \"Nîmes\", \"Avignon\", 'La Rochelle', \"Biarritz\"\n",
+    "    \"Strasbourg\", \"Grenoble\", \"Dijon\", \"Nîmes\",\n",
+    "    \"Avignon\", \"La Rochelle\", \"Biarritz\",\n",
     "}\n",
-    "important_norm = {normalize_city(x) for x in important_raw}\n",
     "\n",
-    "# 3) label only if normalized city is in the important set\n",
-    "df_coords[\"label\"] = df_coords[\"city\"].apply(\n",
-    "    lambda s: df_coords.loc[df_coords[\"city\"] == s, \"city_clean\"].iloc[0]\n",
-    "    if normalize_city(s) in important_norm else \"\"\n",
+    "df_coords[\"label\"] = np.where(\n",
+    "    df_coords[\"city_clean\"].isin(important_cities),\n",
+    "    df_coords[\"city_clean\"],\n",
+    "    \"\"\n",
     ")\n",
     "\n",
-    "# 4) build the map\n",
+    "\n",
+    "# Plot \n",
     "fig = px.scatter_mapbox(\n",
     "    df_coords,\n",
     "    lat=\"latitude\",\n",
     "    lon=\"longitude\",\n",
     "    hover_name=\"city_clean\",\n",
     "    height=720,\n",
-    "    zoom=5.2\n",
+    "    zoom=5.2,\n",
     ")\n",
     "\n",
-    "# 5) bigger bullets + force text display\n",
+    "# Add larger markers and display labels above each point\n",
     "fig.update_traces(\n",
-    "    mode=\"markers+text\",                # <-- important to show text\n",
+    "    mode=\"markers+text\",\n",
     "    marker=dict(color=\"red\", size=9),\n",
     "    text=df_coords[\"label\"],\n",
     "    textposition=\"top center\",\n",
-    "    textfont=dict(size=11)\n",
+    "    textfont=dict(size=11),\n",
     ")\n",
     "\n",
-    "# 6) layout\n",
+    "# Layout\n",
     "fig.update_layout(\n",
     "    mapbox_style=\"carto-positron\",\n",
     "    mapbox_center={\"lat\": 46.6, \"lon\": 2.0},\n",
     "    title=\"Carte des 35 villes touristiques françaises — Coordonnées GPS\",\n",
     "    title_x=0.5,\n",
-    "    margin={\"r\": 0, \"t\": 50, \"l\": 0, \"b\": 0}\n",
+    "    margin={\"r\": 0, \"t\": 50, \"l\": 0, \"b\": 0},\n",
     ")\n",
     "\n",
     "fig.show()\n"
