--- a/Extract/hotels/sample/sample.ipynb
+++ b/Extract/hotels/sample/sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8990907c",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Sample created: hotels_descriptions_sample.json\n"
+      "Sample created: hotels_descriptions_sample.json\n"
      ]
     }
    ],
@@ -18,24 +18,20 @@
     "import json\n",
     "import os\n",
     "\n",
-    "# Path to the original JSON (one level up in ../data/)\n",
     "INPUT_FILE = os.path.join(\"..\", \"data\", \"hotels_descriptions.json\")\n",
-    "\n",
-    "# Output file will be written directly here (inside sample/)\n",
     "OUTPUT_FILE = \"hotels_descriptions_sample.json\"\n",
     "\n",
     "# Load the full dataset\n",
     "with open(INPUT_FILE, \"r\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
-    "# Take only the first 5 records for demo\n",
     "sample_data = data[:5]\n",
     "\n",
     "# Save as sample JSON\n",
     "with open(OUTPUT_FILE, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(sample_data, f, indent=4, ensure_ascii=False)\n",
     "\n",
-    "print(f\"✅ Sample created: {OUTPUT_FILE}\")\n"
+    "print(f\"Sample created: {OUTPUT_FILE}\")\n"
    ]
   }
  ],
