--- a/Transform/final_csv.ipynb
+++ b/Transform/final_csv.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1f268e3e",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "88436ed2",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔍 Incohérences trouvées :\n",
+      "Incohérences trouvées :\n",
       "Empty DataFrame\n",
       "Columns: [city_id, city_name_1, city_name_2, city_name_3]\n",
       "Index: []\n"
@@ -240,7 +240,7 @@
     "merged[\"match_1_3\"] = merged[\"city_name_1\"] == merged[\"city_name_3\"]\n",
     "\n",
     "errors = merged[(~merged[\"match_1_2\"]) | (~merged[\"match_1_3\"])]\n",
-    "print(\"🔍 Incohérences trouvées :\")\n",
+    "print(\"Incohérences trouvées :\")\n",
     "print(errors[[\"city_id\", \"city_name_1\", \"city_name_2\", \"city_name_3\"]])"
    ]
   },
