--- a/Transform/hotels/anal_rating.ipynb
+++ b/Transform/hotels/anal_rating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f996b114",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "2fe244e8",
    "metadata": {},
    "outputs": [
@@ -60,14 +60,12 @@
     "\n",
     "# Convert the JSON data into a Pandas DataFrame for analysis\n",
     "df_hotels = pd.DataFrame(data)\n",
-    "\n",
-    "# Display the first 5 rows to quickly inspect the structure and content\n",
     "print(df_hotels.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "3bce48aa",
    "metadata": {},
    "outputs": [
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "164a7eed",
    "metadata": {},
    "outputs": [
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "bf4104cf",
    "metadata": {},
    "outputs": [
@@ -343,9 +341,8 @@
    "source": [
     "# Count missing ratings per city \n",
     "missing_ratings = df_hotels[df_hotels[\"rating\"].isna()]   # filter only missing ratings\n",
-    "missing_count = missing_ratings[\"location\"].value_counts()  # count per city\n",
+    "missing_count = missing_ratings[\"location\"].value_counts() \n",
     "\n",
-    "# Create bar plot \n",
     "plt.figure(figsize=(10, 6))\n",
     "missing_count.plot(kind=\"bar\", color=\"tomato\", edgecolor=\"black\")\n",
     "\n",
@@ -359,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ff1838f0",
    "metadata": {},
    "outputs": [
@@ -399,6 +396,344 @@
     "plt.grid(axis=\"y\", alpha=0.4)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "93e02f44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>name</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aigues Mortes</td>\n",
+       "      <td>La maison blanche Intra-Muros Free parking</td>\n",
+       "      <td>9,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bayeux</td>\n",
+       "      <td>L'Atelier</td>\n",
+       "      <td>9,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grenoble</td>\n",
+       "      <td>Appartement Hagaki vue panoramique proche gare...</td>\n",
+       "      <td>9,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cassis</td>\n",
+       "      <td>LE SEPT charmant studio aux portes des calanques</td>\n",
+       "      <td>9,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Uzes</td>\n",
+       "      <td>La DAME de FLAUX</td>\n",
+       "      <td>9,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Avignon</td>\n",
+       "      <td>Apartment 40m2-Air conditioning-Elevator-Under...</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Chateau du Haut Koenigsbourg</td>\n",
+       "      <td>Villa Grimm</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Saint-Malo</td>\n",
+       "      <td>Studio Le sillon malouin vue mer</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>N%C3%AEmes</td>\n",
+       "      <td>Appartement T3 proches arènes</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Marseille</td>\n",
+       "      <td>SV - Au Pied du Vieux Port</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Ariege</td>\n",
+       "      <td>La cabane a Joseph</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Gorges du Verdon</td>\n",
+       "      <td>Spacieuse Dépendance Duplex 50 M2 Classé 3 éto...</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Aix en Provence</td>\n",
+       "      <td>Le Discret - Un Voyage en Provence</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>La Rochelle</td>\n",
+       "      <td>Appartement de charme au Marche avec parking</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Eguisheim</td>\n",
+       "      <td>Fleur de Vigne</td>\n",
+       "      <td>9,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Colmar</td>\n",
+       "      <td>Gite Bim Maidala</td>\n",
+       "      <td>9,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Dijon</td>\n",
+       "      <td>Le petit POTE' studio Dijon hyper centre</td>\n",
+       "      <td>9,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Carcassonne</td>\n",
+       "      <td>LA COUR CARREE - chambres d'hôtes</td>\n",
+       "      <td>9,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Saintes Maries de la mer</td>\n",
+       "      <td>Entre ciel et bord de mer</td>\n",
+       "      <td>9,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>PARISIAN HOME l MONTMARTRE</td>\n",
+       "      <td>9,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Toulouse</td>\n",
+       "      <td>Toucan by Yumē</td>\n",
+       "      <td>9,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Montauban</td>\n",
+       "      <td>La Halte Occitane - Classé 3 étoiles - Pour 6 ...</td>\n",
+       "      <td>9,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Collioure</td>\n",
+       "      <td>Collioure Vue Mer Parking Gratuit Fibre</td>\n",
+       "      <td>9,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Bormes les Mimosas</td>\n",
+       "      <td>Studio Liège, vue mer au village de Bormes les...</td>\n",
+       "      <td>9,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Le Mont-Saint-Michel</td>\n",
+       "      <td>Roulotte au pied du Mont Saint Michel</td>\n",
+       "      <td>9,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Biarritz</td>\n",
+       "      <td>L'océan à perte de vue, la grande plage à vos ...</td>\n",
+       "      <td>9,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Annecy</td>\n",
+       "      <td>L'Anneciano - Balcon - Chambre - Vue</td>\n",
+       "      <td>9,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Lille</td>\n",
+       "      <td>galerie jacqueline storme</td>\n",
+       "      <td>9,4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Le Havre</td>\n",
+       "      <td>Le Parc, logement de charme avec SPA privatif ...</td>\n",
+       "      <td>9,4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Amiens</td>\n",
+       "      <td>Maison Longuevie</td>\n",
+       "      <td>9,4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Besancon</td>\n",
+       "      <td>La Romantica by La Felicità</td>\n",
+       "      <td>9,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Rouen</td>\n",
+       "      <td>Charmants 2 pièces - Hyper centre de Rouen</td>\n",
+       "      <td>9,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Bayonne</td>\n",
+       "      <td>Appartement T2 cosy et calme</td>\n",
+       "      <td>9,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Strasbourg</td>\n",
+       "      <td>Nid douillet de la pie</td>\n",
+       "      <td>9,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Lyon</td>\n",
+       "      <td>Pullman Lyon</td>\n",
+       "      <td>9,1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        location  \\\n",
+       "0                  Aigues Mortes   \n",
+       "1                         Bayeux   \n",
+       "2                       Grenoble   \n",
+       "3                         Cassis   \n",
+       "4                           Uzes   \n",
+       "5                        Avignon   \n",
+       "6   Chateau du Haut Koenigsbourg   \n",
+       "7                     Saint-Malo   \n",
+       "8                     N%C3%AEmes   \n",
+       "9                      Marseille   \n",
+       "10                        Ariege   \n",
+       "11              Gorges du Verdon   \n",
+       "12               Aix en Provence   \n",
+       "13                   La Rochelle   \n",
+       "14                     Eguisheim   \n",
+       "15                        Colmar   \n",
+       "16                         Dijon   \n",
+       "17                   Carcassonne   \n",
+       "18      Saintes Maries de la mer   \n",
+       "19                         Paris   \n",
+       "20                      Toulouse   \n",
+       "21                     Montauban   \n",
+       "22                     Collioure   \n",
+       "23            Bormes les Mimosas   \n",
+       "24          Le Mont-Saint-Michel   \n",
+       "25                      Biarritz   \n",
+       "26                        Annecy   \n",
+       "27                         Lille   \n",
+       "28                      Le Havre   \n",
+       "29                        Amiens   \n",
+       "30                      Besancon   \n",
+       "31                         Rouen   \n",
+       "32                       Bayonne   \n",
+       "33                    Strasbourg   \n",
+       "34                          Lyon   \n",
+       "\n",
+       "                                                 name rating  \n",
+       "0          La maison blanche Intra-Muros Free parking    9,9  \n",
+       "1                                           L'Atelier    9,9  \n",
+       "2   Appartement Hagaki vue panoramique proche gare...    9,9  \n",
+       "3    LE SEPT charmant studio aux portes des calanques    9,9  \n",
+       "4                                    La DAME de FLAUX    9,9  \n",
+       "5   Apartment 40m2-Air conditioning-Elevator-Under...    9,8  \n",
+       "6                                         Villa Grimm    9,8  \n",
+       "7                    Studio Le sillon malouin vue mer    9,8  \n",
+       "8                       Appartement T3 proches arènes    9,8  \n",
+       "9                          SV - Au Pied du Vieux Port    9,8  \n",
+       "10                                 La cabane a Joseph    9,8  \n",
+       "11  Spacieuse Dépendance Duplex 50 M2 Classé 3 éto...    9,8  \n",
+       "12                 Le Discret - Un Voyage en Provence    9,8  \n",
+       "13       Appartement de charme au Marche avec parking    9,8  \n",
+       "14                                     Fleur de Vigne    9,8  \n",
+       "15                                   Gite Bim Maidala    9,7  \n",
+       "16           Le petit POTE' studio Dijon hyper centre    9,7  \n",
+       "17                  LA COUR CARREE - chambres d'hôtes    9,7  \n",
+       "18                          Entre ciel et bord de mer    9,7  \n",
+       "19                         PARISIAN HOME l MONTMARTRE    9,7  \n",
+       "20                                     Toucan by Yumē    9,6  \n",
+       "21  La Halte Occitane - Classé 3 étoiles - Pour 6 ...    9,6  \n",
+       "22            Collioure Vue Mer Parking Gratuit Fibre    9,6  \n",
+       "23  Studio Liège, vue mer au village de Bormes les...    9,6  \n",
+       "24              Roulotte au pied du Mont Saint Michel    9,5  \n",
+       "25  L'océan à perte de vue, la grande plage à vos ...    9,5  \n",
+       "26               L'Anneciano - Balcon - Chambre - Vue    9,5  \n",
+       "27                          galerie jacqueline storme    9,4  \n",
+       "28  Le Parc, logement de charme avec SPA privatif ...    9,4  \n",
+       "29                                   Maison Longuevie    9,4  \n",
+       "30                        La Romantica by La Felicità    9,3  \n",
+       "31         Charmants 2 pièces - Hyper centre de Rouen    9,3  \n",
+       "32                       Appartement T2 cosy et calme    9,3  \n",
+       "33                             Nid douillet de la pie    9,3  \n",
+       "34                                       Pullman Lyon    9,1  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_hotel_per_city = (\n",
+    "    df_hotels.loc[df_hotels.groupby(\"location\")[\"rating\"].idxmax(), [\"location\", \"name\", \"rating\"]]\n",
+    "    .sort_values(by=\"rating\", ascending=False)\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "\n",
+    "best_hotel_per_city\n"
    ]
   }
  ],
