--- a/Transform/hotels/sample/sample.ipynb
+++ b/Transform/hotels/sample/sample.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Sample created: hotels_sample.csv\n"
+      "Sample created: hotels_sample.csv\n"
      ]
     }
    ],
@@ -18,22 +18,21 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Path to the original CSV (in ../data/)\n",
+    "# Input CSV file path\n",
     "INPUT_FILE = os.path.join(\"..\", \"data\", \"hotels.csv\")\n",
     "\n",
-    "# Output sample file will be saved here in sample/\n",
+    "# Output CSV file path\n",
     "OUTPUT_FILE = \"hotels_sample.csv\"\n",
     "\n",
-    "# Load the CSV\n",
     "df = pd.read_csv(INPUT_FILE)\n",
     "\n",
-    "# Keep only the first 5 rows\n",
+    "# Get the first 5 rows as a sample\n",
     "df_sample = df.head(5)\n",
     "\n",
-    "# Save as a new CSV in the sample folder\n",
+    "# Save the sample to a new CSV file\n",
     "df_sample.to_csv(OUTPUT_FILE, index=False, encoding=\"utf-8\")\n",
     "\n",
-    "print(f\"✅ Sample created: {OUTPUT_FILE}\")\n"
+    "print(f\"Sample created: {OUTPUT_FILE}\")\n"
    ]
   }
  ],
