--- a/Visualisations/cartes.ipynb
+++ b/Visualisations/cartes.ipynb
@@ -30,9 +30,9 @@
     "AWS_SECRET_ACCESS_KEY = os.getenv('AWS_SECRET_KEY')\n",
     "\n",
     "# Define S3 parameters\n",
-    "S3_BUCKET = 'flodussartprojectkayak'                      # name of the S3 bucket\n",
-    "S3_FILE_KEY = 'projectKayack/src/final_ter.csv'           # path of the file in the bucket\n",
-    "LOCAL_FILE = 'data/hotels_weather_final_ter.csv'               # local file to upload\n"
+    "S3_BUCKET = 'flodussartprojectkayak'                   \n",
+    "S3_FILE_KEY = 'projectKayack/src/final_ter.csv'           \n",
+    "LOCAL_FILE = 'data/hotels_weather_final_ter.csv'               \n"
    ]
   },
   {
@@ -45,9 +45,9 @@
     "# Create an S3 client using boto3\n",
     "s3 = boto3.client(\n",
     "    's3',\n",
-    "    aws_access_key_id=os.getenv('AWS_KEY'),               # AWS access key\n",
-    "    aws_secret_access_key=os.getenv('AWS_SECRET_KEY'),    # AWS secret key\n",
-    "    region_name='eu-north-1'                              # AWS region\n",
+    "    aws_access_key_id=os.getenv('AWS_KEY'),               \n",
+    "    aws_secret_access_key=os.getenv('AWS_SECRET_KEY'),    \n",
+    "    region_name='eu-north-1'                             \n",
     ")"
    ]
   },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4ab37726",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
           "tickformat": ".0f",
           "ticks": "outside",
           "title": {
-           "text": "Weather Score"
+           "text": "Score météo"
           }
          },
          "colorscale": [
@@ -1250,7 +1250,7 @@
          }
         },
         "title": {
-         "text": "Top 5 Cities by Weather Score",
+         "text": "Top 5 des villes selon le score météo",
          "x": 0.5,
          "xanchor": "center"
         }
@@ -1290,12 +1290,12 @@
     "fig.update_layout(\n",
     "    mapbox_style=\"carto-positron\",\n",
     "    title={\n",
-    "        'text': \"Top 5 Cities by Weather Score\",\n",
+    "        'text': \"Top 5 des villes selon le score météo\",\n",
     "        'x': 0.5,\n",
     "        'xanchor': 'center'\n",
     "    },\n",
     "    coloraxis_colorbar=dict(\n",
-    "        title=\"Weather Score\",\n",
+    "        title=\"Score météo\",\n",
     "        tickformat=\".0f\",\n",
     "        ticks=\"outside\"\n",
     "    ),\n",
