--- a/Load/database/load_s3_to_postgres.ipynb
+++ b/Load/database/load_s3_to_postgres.ipynb
@@ -24,7 +24,7 @@
     "</p>\n",
     "\n",
     "<p style=\"font-size:0.85em;\">\n",
-    "Cette section charge les variables sensibles depuis le fichier <code>.env</code> :  \n",
+    "Chargement des variables depuis le fichier <code>.env</code> :  \n",
     "\n",
     "- <b>Clés AWS</b> pour accéder au bucket S3 et télécharger le fichier final (<code>hotels_weather_final_ter.csv</code>).  \n",
     "- <b>Paramètres Postgres</b> pour préparer la connexion à la base de données.  \n",
